src/objects/Benefit__c.object
<CustomObject>
    <description>The purpose of this object is to associated tangible and intangible business benefits to work requests and/or projects so that cost/benefit evaluations can be made by the IT project management approval committee.</description>
    <fields>
        <fullName>Actual_Benefit_Amount__c</fullName>
        <label>Actual Benefit Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Benefit_Realized__c</fullName>
        <label>Actual Benefit Realized</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Benefit_Classification__c</fullName>
        <label>Benefit Classification</label>
        <picklist>
            <picklistValues>
                <fullName>Increased Revenue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operational Efficiency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reduced Costs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regulatory / Mandate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Benefit_Description__c</fullName>
        <label>Benefit Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Benefit_Type__c</fullName>
        <inlineHelpText>Tangible benefits can be tied directly to a number.</inlineHelpText>
        <label>Benefit Type</label>
        <picklist>
            <picklistValues>
                <fullName>Tangible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intangible</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Planned_Benefit_Amount__c</fullName>
        <label>Planned Benefit Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>PPM_Project__c</referenceTo>
        <relationshipLabel>Benefits</relationshipLabel>
        <relationshipName>Benefits</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Work_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Please associate to the proper business unit work request.</inlineHelpText>
        <label>Work Request</label>
        <referenceTo>Work_Request__c</referenceTo>
        <relationshipLabel>Benefits</relationshipLabel>
        <relationshipName>Benefits</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Benefit</label>
    <nameField>
        <label>Benefit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Benefits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>